<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hmssample</string>
    <string name="hw_id">Huawei ID</string>
    <string name="hw_pay">Huawei IAP</string>
    <string name="hw_push">Huawei PUSH</string>
	<string name="hw_sns">Huawei SNS</string>
	<string name="hw_game">Huawei GAME</string>
	<string name="sample_description">Huawei Mobile Service Use process Demo</string>
	<string name="sample_hwid_description">Huawei ID Use Process Demo</string>
        <string name="sample_hwgamedescription">Huawei GAME Use Process Demo</string>
	<string name="sample_hwpay_description">Huawei IAP Use Process Demo</string>
	<string name="sample_hwsns_description">Huawei PUSH Use Process Demo</string>
	<string name="sample_hwpush_description">Huawei SNS Use Process Demo</string>
	<string name="sample_pms_description">PMS</string>
	<string name="sample_pms_pms">Query Product Information</string>
	<string name="sample_pms_pms_pay">PMS Payments</string>
	<string name="hwid_sign_in">Login In</string>
	<string name="hwid_sign_out">Login Out</string>
	<string name="hwid_user_photo">User photo</string>
	
	<string name="sns_start">Start SNS</string>
	<string name="sns_send_msg">Send message</string>
	
	<string name="num_buy">"Number: "</string>
	<string name="hwpay_buy">Buy</string>
	<string name="request_id">"Order number: "</string>
	<string name="hwpay_query">"Query Order"</string>
	<string name="product_no">"Product NO: "</string>

	<string name="push_gettoken_sync">Synchronous GetToken</string>
	<string name="push_gettoken_asyn">Asynchronous GetToken</string>
	<string name="get_push_status">Get Push State</string>
	<string name="push_status">"Push State: "</string>
	<string name="push_receive_msg">Receive push pass message</string>
	<string name="push_receive_msg_notify">Receive push notification bar message</string>
	<string name="push_delete_token">Delete Token</string>
	
	<string name="push_token_des">"TOKEN: "</string>
</resources>
