<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huawei.hmssample.MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_description"/>
        
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#123456"/>
        
    <Button
        android:id="@+id/hw_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw_id" />
    
    <Button
        android:id="@+id/hw_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw_pay" />
                  
     <Button
        android:id="@+id/hw_sns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw_sns" />
     
     <Button
        android:id="@+id/hw_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw_push" />

    <Button
        android:id="@+id/hw_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw_game" />

</LinearLayout>
