<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huawei.hmssample.HuaweiPushActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_hwpush_description"/>
        
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#123456"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
	        android:id="@+id/push_gettoken_sync"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/push_gettoken_sync" />
        
        <Button
	        android:id="@+id/push_gettoken_asyn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/push_gettoken_asyn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/push_token_des" />
        
        <TextView
	        android:id="@+id/push_token_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:id="@+id/push_get_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_push_status" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/push_status" />
        
        <TextView
	        android:id="@+id/push_status_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/push_msg_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/push_receive_msg" />

	<CheckBox
		android:id="@+id/push_msg_checkbox_notify"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:checked="true"
		android:text="@string/push_receive_msg_notify" />

    <Button
        android:id="@+id/delete_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_delete_token" />
        
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#123456"/>

    <FrameLayout 
        android:id="@+id/framelog"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></FrameLayout>
</LinearLayout>
