<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_no"/>

        <EditText
            android:id="@+id/product_no_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/hwpay_pms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_pms_pms" />

    <Button
        android:id="@+id/hwpay_pms_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_pms_pms_pay" />
</LinearLayout>