<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/ware_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ware_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ware_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ware_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_buy"/>

        <EditText
            android:id="@+id/ware_num_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/hwpay_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hwpay_buy" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/request_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_id"/>

        <EditText
            android:id="@+id/request_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:id="@+id/hwpay_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hwpay_query" />

</LinearLayout>