<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huawei.hmssample.HuaweiSnsActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_hwsns_description"/>
        
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#123456"/>

   	<Button
        android:id="@+id/sns_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sns_start" />
   	
   	<Button
        android:id="@+id/sns_send_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sns_send_msg" />
        
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#123456"/>

    <FrameLayout 
        android:id="@+id/framelog"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></FrameLayout>
</LinearLayout>
