<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huawei.hmssample.HuaweiPayActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_hwpay_description"/>
        
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#123456"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="0.0dp"
            android:layout_weight="1"
            android:text="@string/hw_pay"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0.0dp"
            android:layout_weight="1"
            android:text="@string/sample_pms_description"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/framepay"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#123456"/>

    <FrameLayout 
        android:id="@+id/framelog"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></FrameLayout>
</LinearLayout>
